# loveyourboyfriend

./: .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  render.yaml
apps/api/: .env.example  pyproject.toml
apps/api/app/: __init__.py  auth.py  config.py  dependencies.py  main.py  models.py
apps/api/app/ai/: __init__.py  chains.py  fallback.py  history.py  memory.py  prompts.py  segmentation.py
apps/api/app/jobs/: cleanup_voice.py
apps/api/app/repositories/: chat.py
apps/api/app/routes/: chat.py  voice.py
apps/api/app/services/: chat.py
apps/api/tests/: test_auth.py  test_chains.py  test_chat_service.py  test_cleanup_voice.py  test_config.py  test_fallback.py  test_health.py  test_history.py  test_memory.py  test_models.py  test_prompts.py  test_provider_compatibility.py  test_routes.py  test_schema_contract.py  test_segmentation.py
apps/web/: .env.example  package.json  vitest.config.ts
docs/: deployment.md
docs/superpowers/plans/: 2026-07-15-chat-mvp.md  2026-07-15-companion-experience-v2.md  2026-07-15-github-readme.md  2026-07-15-mvp-scaffold.md  2026-07-15-siliconflow-recovery.md
docs/superpowers/specs/: 2026-07-15-companion-experience-v2-design.md  2026-07-15-github-readme-design.md  2026-07-15-loveyourboyfriend-mvp-design.md  2026-07-15-siliconflow-recovery-design.md
supabase/: config.toml
supabase/migrations/: 20260715040027_initial_chat_schema.sql  20260715062025_initial_chat_schema.sql  20260715062934_harden_database_permissions.sql  20260715090000_retention_cleanup.sql  20260715190000_companion_experience_v2.sql
(+11 files in other folders)
