[project]
name = "loveyourboyfriend-api"
version = "0.1.0"
description = "FastAPI and LangChain backend for Love Your Boyfriend"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "langchain>=1,<2",
  "langchain-openai>=1,<2",
  "openai>=2,<3",
  "pydantic-settings>=2,<3",
  "python-multipart>=0.0.20,<1",
  "supabase>=2,<3",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "httpx2>=2,<3",
  "pytest>=8,<10",
  "pytest-asyncio>=0.25,<2",
  "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
addopts = "-ra -p no:cacheprovider"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
